--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/_EtfSearchFilter.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/_EtfSearchFilter.cshtml
@@ -39,10 +39,10 @@
                         </div>
                         <div class="c-filter__keyword">
                             <!-- 條件群組[data-filter-group] -->
-                            <div class="c-filterForm" id="uid-criteria-discountTags" data-filter-group>
+                            <div class="c-filterForm" id="uid-criteria-keywordsTags" data-filter-group>
                                 <!-- 條件群組標題[data-filter-title]，需要顯示在tag的文字請用<span>包起來 -->
                                 <div class="c-filterForm__title" data-filter-title>
-                                    <span>熱門關鍵字</span>@*對應JSON欄位【DiscountTags】*@
+                                    <span>熱門關鍵字</span>@*對應JSON欄位【KeywordsTags】*@
                                 </div>
                                 <div class="c-filterForm__value">
                                     <div class="l-pickGroup">
