基金搜尋申購、貼標問題

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
@@ -1954,7 +1954,7 @@
                 let opts = {
                     template: '#uid-template',
                     criterias: [
-                        { field: 'Tags', ele: '#hotproducts_criteria input:checkbox' }, { field: 'HotKeyWordTags', ele: '#hotkey_criteria input:checkbox' },
+						{ field: 'HotProductsTags', ele: '#hotproducts_criteria input:checkbox' }, { field: 'HotKeyWordTags', ele: '#hotkey_criteria input:checkbox' },
                         { field: 'DomesticForeignFundIndicator', ele: '#DomesticForeignFundIndicator input:checkbox' }, { field: 'DomesticForeignFundIndicator', ele: '#DomesticForeignFundIndicator input:checkbox', all: 'all', selector: ':not(:checked)' },
                         { field: 'Currency.Value', ele: '#currencies_criteria input:checkbox' }, { field: 'Currency.Value', ele: '#currencies_criteria input:checkbox', all: 'all', selector: ':not(:checked)' },
                         { field: 'FundCompanyName', ele: '#companies_criteria input:checkbox' }, { field: 'FundCompanyName', ele: '#companies_criteria input:checkbox', all: 'all', selector: ':not(:checked)' },
