--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductSearch.cshtml
@@ -341,6 +341,17 @@
                 <a href="<%= ProductDetailUrl %>" target="_blank" class="o-contentLink t-bold u-ellipsis-2">
                     <%= ProductDisplayName %>
                 </a>
+                <% if (DiscountTags != null && DiscountTags.length > 0) { %>
+                <div class="l-target__additional">
+                    <ul class="l-tag">
+                        <% for (var i = 0; i < DiscountTags.length; i++) { %>
+                        <li class="l-tag__item">
+                            <a href="#" class="o-tag"><%= DiscountTags[i] %></a>
+                        </li>
+                        <% } %>
+                    </ul>
+                </div>
+                <% } %>
             </div>
         </td>
         <td class="c-cardTable__space"></td>
