搜尋結果「市價(日期)」欄位之日期來源改為嘉實 5/29 提供的新欄位「市價日期」

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/SearchResult/_ResultTemplate.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/SearchResult/_ResultTemplate.cshtml
@@ -42,7 +42,7 @@
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="marketPriceTable,marketRiskTable,tradeTable,baseTable">
             <!-- [data-length]: 設定轉換成卡片時，標題的寬度，單位為字數em，範圍1~5字 -->
             <div class="c-cardTable__title" data-length="4">市價<br>(日期)</div>
-            <div class="c-cardTable__content"><%= MarketPrice.Text %><br><span class="t-date"><%= NetAssetValueDate %></span></div>
+            <div class="c-cardTable__content"><%= MarketPrice.Text %><br><span class="t-date"><%= MarketPriceDate %></span></div>
         </td>
         @*【最新淨值(日期)】=> 淨值績效,淨值風險*@
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="netWorthTable,netWorthRiskTable">
@@ -297,7 +297,7 @@
         @*【市價(日期)】=> 市價績效,市價風險,交易狀況,基本資料*@
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="marketPriceTable,marketRiskTable,tradeTable,baseTable">
             <div class="c-cardTable__title" data-length="4">市價<br>(日期)</div>
-            <div class="c-cardTable__content"><%= MarketPrice.Text %><br><span class="t-date"><%= NetAssetValueDate %></span></div>
+            <div class="c-cardTable__content"><%= MarketPrice.Text %><br><span class="t-date"><%= MarketPriceDate %></span></div>
         </td>
         @*【幣別】=> 市價績效,淨值績效,基本資料*@
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="marketPriceTable,netWorthTable,baseTable">
@@ -392,7 +392,7 @@
         @*【市價(日期)】=> 市價績效,市價風險,交易狀況,基本資料*@
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="marketPriceTable,marketRiskTable,tradeTable,baseTable">
             <div class="c-cardTable__title" data-length="4">市價<br>(日期)</div>
-            <div class="c-cardTable__content"><%= MarketPrice.Text %><br><span class="t-date"><%= NetAssetValueDate %></span></div>
+            <div class="c-cardTable__content"><%= MarketPrice.Text %><br><span class="t-date"><%= MarketPriceDate %></span></div>
         </td>
         @*【幣別】=> 市價績效,淨值績效,基本資料*@
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="marketPriceTable,netWorthTable,baseTable">
@@ -680,7 +680,7 @@
         @*【市價(日期)】=> 市價績效,市價風險,交易狀況,基本資料*@
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="marketPriceTable,marketRiskTable,tradeTable,baseTable">
             <div class="c-cardTable__title" data-length="4">市價<br>(日期)</div>
-            <div class="c-cardTable__content"><%= MarketPrice.Text %><br><span class="t-date"><%= NetAssetValueDate %></span></div>
+            <div class="c-cardTable__content"><%= MarketPrice.Text %><br><span class="t-date"><%= MarketPriceDate %></span></div>
         </td>
         @*【風險屬性】=> 市價風險,淨值風險*@
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="marketRiskTable,netWorthRiskTable">
@@ -840,7 +840,7 @@
         @*【市價(日期)】=> 市價績效,市價風險,交易狀況,基本資料*@
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="marketPriceTable,marketRiskTable,tradeTable,baseTable">
             <div class="c-cardTable__title" data-length="4">市價<br>(日期)</div>
-            <div class="c-cardTable__content"><%= MarketPrice.Text %><br><span class="t-date"><%= NetAssetValueDate %></span></div>
+            <div class="c-cardTable__content"><%= MarketPrice.Text %><br><span class="t-date"><%= MarketPriceDate %></span></div>
         </td>
         @*【折溢價】=> 交易狀況*@
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="tradeTable">
@@ -915,7 +915,7 @@
         @*【市價(日期)】=> 市價績效,市價風險,交易狀況,基本資料*@
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="marketPriceTable,marketRiskTable,tradeTable,baseTable">
             <div class="c-cardTable__title" data-length="4">市價<br>(日期)</div>
-            <div class="c-cardTable__content"><%= MarketPrice.Text %><br><span class="t-date"><%= NetAssetValueDate %></span></div>
+            <div class="c-cardTable__content"><%= MarketPrice.Text %><br><span class="t-date"><%= MarketPriceDate %></span></div>
         </td>
         @*【幣別】=> 市價績效,淨值績效,基本資料*@
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="marketPriceTable,netWorthTable,baseTable">
