--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_ForeignStockList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_ForeignStockList.cshtml
@@ -71,7 +71,7 @@
                         </th>
                         <th>
                             <div class="c-table__title">
-                                <span>收盤價</span>
+                                <span>收盤價<br>(收盤日)</span>
                                 <a href="#" class="o-sorting" data-sorting-column="ClosingPrice"></a>
                             </div>
                         </th>
@@ -149,9 +149,9 @@
                     </td>
                     <td class="c-cardTable__body" data-card-table-width="1/2">
                         <!-- [data-length]: 設定轉換成卡片時，標題的寬度，單位為字數em，範圍1~5字 -->
-                        <div class="c-cardTable__title" data-length="5">收盤價</div>
+                        <div class="c-cardTable__title" data-length="5">收盤價<br>(收盤日)</div>
                         <% if (ClosingPrice != null) { %>
-                        <div class="c-cardTable__content" data-netvalue="<%= ClosingPrice %>"><%= ClosingPrice %></div>
+                        <div class="c-cardTable__content" data-netvalue="<%= ClosingPrice %>"><%= ClosingPrice %><br><span class="t-date" data-netvaluedate="<%= ClosingPriceDate %>"><%= ClosingPriceDate %></span></div>
                         <% } else {%>
                         <span>-</span>
                         <% } %>
@@ -188,18 +188,18 @@
                             <div class="t-tip--lt">點鈴鐺設定到價通知</div>
                             <% } else {%>
                             <% if (Info.ReachValue  != null ) { %>
-                            <div class="<% if (NetAssetValue >= Info.ReachValue){%><%= 'o-iconText o-iconText--tick t-warning' %><% }%>" data-after="淨值 <%= Info.ReachValue %>"></div>
+                            <div class="<% if (ClosingPrice>= Info.ReachValue){%><%= 'o-iconText o-iconText--tick t-warning' %><% }%>" data-after="淨值 <%= Info.ReachValue %>"></div>
                             <% } %>
                             <% if (Info.RisePercent  != null  || Info.FallPercent) { %>
                             <div class="l-straight@lt">
                                 <% if (Info.RisePercent  != null ) { %>
                                 <div class="l-straight__item">
-                                    <span class="<% if (NetAssetValue >= Info.RiseValue){%><%= 'o-iconText o-iconText--tick t-warning' %><% }%>" data-after="漲幅 <%= Info.RisePercent %>%"></span>
+                                    <span class="<% if (ClosingPrice>= Info.RiseValue){%><%= 'o-iconText o-iconText--tick t-warning' %><% }%>" data-after="漲幅 <%= Info.RisePercent %>%"></span>
                                 </div>
                                 <% } %>
                                 <% if (Info.FallPercent  != null ) { %>
                                 <div class="l-straight__item">
-                                    <span class="<% if (NetAssetValue <= Info.FallValue){%><%= 'o-iconText o-iconText--tick t-warning' %><% }%>" data-after="跌幅 <%= Info.FallPercent %>%"></span>
+                                    <span class="<% if (ClosingPrice<= Info.FallValue){%><%= 'o-iconText o-iconText--tick t-warning' %><% }%>" data-after="跌幅 <%= Info.FallPercent %>%"></span>
                                 </div>
                                 <% } %>
                             </div>
@@ -210,7 +210,7 @@
                     <!-- .c-cardTable__space: 若需轉換成卡片，body 區塊結尾處需要額外放置此一欄位分隔 -->
                     <td class="c-cardTable__space"></td>
                     <!-- .c-cardTable__footer: 轉成卡片時若為下方按鈕區塊，需要加此 class name -->
-                    <td class="c-cardTable__footer" data-card-table-width="<% if (OnlineSubscriptionAvailability == 'Y'){%><%= '2/3' %><% } else {%><%= '1/1' %> <%}%>">
+                    <td class="c-cardTable__footer" data-card-table-width="<% if (AvailabilityStatus == 'Y' && OnlineSubscriptionAvailability != 'N'){%><%= '2/3' %><% } else {%><%= '1/1' %> <%}%>">
                         <div class="c-cardTable__content">
                             <ul class="l-collect l-collect--divider@lt">
                                 <li class="l-collect__item">
@@ -224,7 +224,7 @@
                     </td>
                     <td class="c-cardTable__footer" data-card-table-width="1/3">
                         <div class="c-cardTable__content">
-                            <% if (OnlineSubscriptionAvailability == "Y") { %>
+                            <% if (AvailabilityStatus == "Y" && OnlineSubscriptionAvailability != "N") { %>
                             <%= Button.SubscriptionButtonHtml %>
                             <% } %>
                         </div>
