--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
@@ -10,6 +10,9 @@
     var MobileERegularLink = Settings.GetSetting("MobileERegular");
     var MobileIleoSingleLink = Settings.GetSetting("MobileIleoSingle");
     var MobileIleoRegularLink = Settings.GetSetting("MobileIleoRegular");
+    var WebEntrustLink = Settings.GetSetting("WebEntrust");
+    var MobileEntrustLink = Settings.GetSetting("MobileEntrust");
+    var IleoEntrustLink = Settings.GetSetting("IleoEntrust");
     var AppPayLoginUrl = Settings.GetSetting("AppPay.CallLoginUrl");
 }
 
@@ -239,69 +242,11 @@
 
         EventHandler.AddOnExec('subscription-init', function (e) {
             let self = e.target;
-            let single = document.getElementById("subscriptionSingle");
-            let regular = document.getElementById("subscriptionRegular");
             if (!isLogin) {
                 self.setAttribute("href", "#popupLogin");
             }
             else {
                 self.setAttribute("href", "#popupPurchase");
-                let singlelink = "";
-                let regularlink = "";
-                if ($(window).width() < 768) {
-                    $('input[name="platform"]', '#popupPurchase').on('click', function () {
-                        let val = $(this).data('name');
-                        if (val == "firste") {
-                            singlelink = "@MobileESingleLink";
-                            regularlink = "@MobileERegularLink";
-                        } else {
-                            singlelink = "@MobileIleoSingleLink";
-                            regularlink = "@MobileIleoRegularLink";
-                        }
-                        let singleUrl = new URL(decodeURIComponent(singlelink.replaceAll("&amp;", "&")));
-                        let regularUrl = new URL(decodeURIComponent(regularlink.replaceAll("&amp;", "&")));
-                        let singleParms = singleUrl.searchParams;
-                        let regularParms = regularUrl.searchParams;
-
-                        if (singleParms.has("link")) {
-                            let singleInsindeUrl = new URL(singleParms.get("link"));
-                            let regularInsindUrl = new URL(regularParms.get("link"));
-                            singleInsindeUrl.searchParams.delete("FundCode");
-                            singleInsindeUrl.searchParams.append("FundCode", single.getAttribute("eh-subscription-id"));
-                            regularInsindUrl.searchParams.delete("FundCode");
-                            regularInsindUrl.searchParams.append("FundCode", regular.getAttribute("eh-subscription-id"));
-                            singleParms.delete("link",);
-                            singleParms.append("link", singleInsindeUrl);
-                            regularParms.delete("link");
-                            regularParms.append("link", regularInsindUrl);
-
-                        }
-                        single.setAttribute("href", singleUrl);
-                        regular.setAttribute("href", regularUrl);
-                        store.set("MobilePlatform", val);
-                    });
-
-                    let val = store.get('MobilePlatform') || "";
-                    if (val == "firste" || val == "") {
-                        store.set("MobilePlatform", 'firste');
-                        $('input[data-name="firste"]', '#popupPurchase').prop('checked', true);
-                        singlelink = "@MobileESingleLink";
-                        regularlink = "@MobileERegularLink";
-                    } else {
-                        $('input[data-name="ileo"]', '#popupPurchase').prop('checked', true);
-                        singlelink = "@MobileIleoSingleLink";
-                        regularlink = "@MobileIleoRegularLink";
-                    }
-
-                    single.setAttribute("href", decodeURIComponent(singlelink.replaceAll("&amp;", "&")));
-                    regular.setAttribute("href", decodeURIComponent(regularlink.replaceAll("&amp;", "&")));
-                }
-                else {
-                    singlelink = "@SubcriptionSingleLink";
-                    regularlink = "@SubcriptionRegularLink";
-                    single.setAttribute("href", decodeURIComponent(singlelink.replaceAll("&amp;", "&")));
-                    regular.setAttribute("href", decodeURIComponent(regularlink.replaceAll("&amp;", "&")));
-                }
             }
         });
 
@@ -309,33 +254,69 @@
             if (isLogin) {
                 let self = e.target;
                 let id = self.getAttribute('eh-subscription-id');
-                let single = document.getElementById("subscriptionSingle");
-                let regular = document.getElementById("subscriptionRegular");
-                single.setAttribute('eh-subscription-id', id);
-                regular.setAttribute('eh-subscription-id', id);
-                let singleUrl = new URL(decodeURIComponent(single.getAttribute("href")));
-                let regularUrl = new URL(decodeURIComponent(regular.getAttribute("href")));
-                let singleParms = singleUrl.searchParams;
-                let regularParms = regularUrl.searchParams;
-                if (singleParms.has("link")) {
-                    let singleInsindeUrl = new URL(singleParms.get("link"));
-                    let regularInsindUrl = new URL(regularParms.get("link"));
-                    singleInsindeUrl.searchParams.delete("FundCode");
-                    singleInsindeUrl.searchParams.append("FundCode", id);
-                    regularInsindUrl.searchParams.delete("FundCode");
-                    regularInsindUrl.searchParams.append("FundCode", id);
-                    singleParms.delete("link",);
-                    singleParms.append("link", singleInsindeUrl);
-                    regularParms.delete("link");
-                    regularParms.append("link", regularInsindUrl);
+                let type = self.getAttribute('eh-subscription-type');
+                    let single = document.getElementById("subscriptionSingle");
+                    let regular = document.getElementById("subscriptionRegular");
+                    let go = document.getElementById("subscriptionGo");
+                    single.setAttribute('eh-subscription-id', id);
+                    regular.setAttribute('eh-subscription-id', id);
+                    go.setAttribute('eh-subscription-id', id);
+                    let singleUrl = new URL(decodeURIComponent(single.getAttribute("href")));
+                    let regularUrl = new URL(decodeURIComponent(regular.getAttribute("href")));
+                    let goUrl = new URL(decodeURIComponent(go.getAttribute("href")));
+                    let singleParms = singleUrl.searchParams;
+                    let regularParms = regularUrl.searchParams;
+                    let goParms = goUrl.searchParams;
+                    if (singleParms.has("link")) {
+                        let mobilePlatform = store.get("MobilePlatform");
+                        //第e行動、ILEO
+                        let singleInsindeUrl = new URL(singleParms.get("link"));
+                        let regularInsindUrl = new URL(regularParms.get("link"));
+                        singleInsindeUrl.searchParams.delete("FundCode");
+                        singleInsindeUrl.searchParams.append("FundCode", id);
+                        regularInsindUrl.searchParams.delete("FundCode");
+                        regularInsindUrl.searchParams.append("FundCode", id);
+                        singleParms.delete("link",);
+                        singleParms.append("link", singleInsindeUrl);
+                        regularParms.delete("link");
+                        regularParms.append("link", regularInsindUrl);
+                        let goInsideUrl = new URL(goParms.get("link"));
+                        if (mobilePlatform == "firste") {
+                            if (goParms.has("prdCode")) {
+                            goParms.delete("prdCode");
+                            goParms.append("prdCode", id);
+                        }
+                            } else {
+                                goInsideUrl.searchParams.delete("FundCode");
+                                goInsideUrl.searchParams.append("FundCode", id);
+                                goParms.delete("link");
+                                goParms.append("link", goInsideUrl);
+                            }
+                    } else {
+                        //第e個網
+                        if (singleParms.has("FundCode")) {
+                            singleParms.delete("FundCode");
+                            singleParms.append("FundCode", id);
+                            regularParms.delete("FundCode");
+                            regularParms.append("FundCode", id);
+                        }
+                        if (goParms.has("prdCode")) {
+                            goParms.delete("prdCode");
+                            goParms.append("prdCode", id);
+                        }
+                    }
+                    single.setAttribute("href", singleUrl);
+                    regular.setAttribute("href", regularUrl);
+                    go.setAttribute("href", goUrl);
+                if (type.toLowerCase() == "fund") {
+                    $(single).closest('div').removeClass('u-hidden');
+                    $(regular).closest('div').removeClass('u-hidden');
+                    $(go).closest('div').addClass('u-hidden');
                 } else {
-                    singleParms.delete("FundCode");
-                    singleParms.append("FundCode", id);
-                    regularParms.delete("FundCode");
-                    regularParms.append("FundCode", id);
+                    $(single).closest('div').addClass('u-hidden');
+                    $(regular).closest('div').addClass('u-hidden');
+                    $(go).closest('div').removeClass('u-hidden');
                 }
-                single.setAttribute("href", singleUrl);
-                regular.setAttribute("href", regularUrl);
             }
         });
 
@@ -439,7 +420,7 @@
             let self = e.target;
             let type = self.getAttribute('eh-info-type');
             let id = self.getAttribute('eh-info-id');
-            let url = $(self).closest("tr").find('[data-id]').attr('href');        
+            let url = $(self).closest("tr").find('[data-id]').attr('href');
             $('[data-set-alert]', '#popupAlert').data('type', type);
             if (type.toLowerCase() != "fund") {
                 $("#popupAlert").find('[data-set-title]').text('收盤價');
